# Robsic-project-in-development-of-an-autonomous-vehicle-golf-cart-ezgo-rxv

./: README.md  depend.sh  frames.gv  frames.sh  golfinho.sh  golfinho_nav2.sh  map_create.sh  teleop.sh
src/golfinho_cartographer/: CMakeLists.txt  package.xml
src/golfinho_cartographer/config/: Problemas no cartographer.txt  golfinho_lds_2d.lua  golfinho_lds_3d.lua  possiveis_soluções _para _o_cartorapher.txt
src/golfinho_cartographer/launch/: golfinho_cartographer.launch.py  golfinho_occupancy_grid.launch.py
src/golfinho_cartographer/rviz/: rviz_golfinho.rviz
src/golfinho_model/: CMakeLists.txt  config_model_phisys.txt  package.xml
src/golfinho_model/config/: ekf.yaml  rviz_golfinho.rviz
src/golfinho_model/maps/: map.pgm
src/golfinho_model/meshes/: LIDAR_Back.dae  LIDAR_Front.dae  LIDAR_Left.dae  LIDAR_Right.dae  base_link.dae  chassi.stl  sick_270.dae  sick_4camadas.dae  sick_4camadas2.dae  steering.dae  wheel_.dae
src/golfinho_model/meshes/golfinho/: wheel_old.dae  zed_w_support.dae
src/golfinho_model/meshes/golfinho/DAE_STL_sensores/: LIDAR_Left.dae
src/golfinho_model/meshes/golfinho_bkp/: steering.dae  wheel.dae
src/golfinho_model/meshes/golfinho_bkp/DAE_STL_sensores/: LIDAR_Right.dae  LIDAR_back.dae  LIDAR_front.dae
src/golfinho_model/models/golfinho_cartographer/: model.sdf
src/golfinho_model/models/golfinho_description/: model.config  model.sdf
src/golfinho_model/models/golfinho_description/meshes/: roda.dae  steering.dae
src/golfinho_model/models/golfinho_slam/: model.config  model.sdf
src/golfinho_model/models/teste/: model.sdf
src/golfinho_model/params/: map_params.yaml  map_saver_params.yaml  nav2_params.yaml
src/golfinho_model/rviz/: rviz_golfinho.rviz  rviz_golfinho_slam.rviz
src/golfinho_model/urdf/: golfinho.urdf  golfinho.urdf.xacro  golfinho_cartographer.urdf
src/golfinho_model/worlds/: teste.world
src/golfinho_nav2/: CMakeLists.txt  package.xml
src/golfinho_nav2/launch/: navigation2.launch.py
src/golfinho_nav2/map/: map.yaml
src/golfinho_nav2/param/: golfinho.yaml
src/golfinho_nav2/rviz/: rviz_golfinho.rviz
src/golfinho_robsic/: CMakeLists.txt  package.xml
src/golfinho_robsic/launch/: golfinho_gazebo.launch.py  golfinho_gazebo_cartograph.launch.py  golfinho_gazebo_nav2.launch.py  golfinho_rviz.launch.py
src/golfinho_teleop/: CMakeLists.txt  package.xml
src/golfinho_teleop/src/: golfinho_teleop_node.cpp
